AND-3689: fixing alignment on retina iphones

--- a/ArticleTemplates/assets/scss/modules/witness/_contribute.scss
+++ b/ArticleTemplates/assets/scss/modules/witness/_contribute.scss
@@ -77,6 +77,11 @@ Display a call-to-action asking for contributions to a Guardian Witness assignme
             @include mq($from: col2) {
                 bottom: 1px;
             }
+            @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
+                @include mq($to: col2) {
+                    bottom: 0px;
+                }
+            }
         }
         background: transparent url('../img/guardianwitness.png') no-repeat 0 50%;
         background-size: contain;
